Fix notification color.
## Issue
Closes: 6196 Bright Theme is Broken

## Notes
I was trying to fix the problem of the border not visible in Desktop Dark because the highlight color was the same as the border color.  The approach didn't take Light and Odysee into account ... oops.

Round 2.

--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -12,7 +12,7 @@
   // Structure
   --color-background: var(--color-gray-9);
   --color-background-overlay: #21252999;
-  --color-border: var(--color-gray-7);
+  --color-border: #333338;
   --color-card-background: var(--color-gray-8);
   --color-card-background-highlighted: var(--color-gray-7);
 
